# tks

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO
.github/workflows/: rust-test.yml
doc/: architecture.rst  install.md
tks-cli/: Cargo.toml  README.md  provision-fscrypt.sh
tks-cli/src/: import_kwallet.rs  main.rs
tks-service/: Cargo.toml  README.md  io.linux-tks.service  tks.service
tks-service/config/: default.toml  service.toml  test.toml
tks-service/src/: dbus.rs  lib.rs  main.rs  tks_dbus.rs
tks-service/src/dbus/fdo/: item.rs  session.rs
tks-service/src/doc/: ARCHITECTURE.md
tks-service/src/settings/: mod.rs
tks-service/src/storage/: collection.rs  fscrypt.rs  mod.rs  password_store.rs  tks_gcm.rs
tks-service/src/tks_dbus/: client_context.rs  collection_impl.rs  item_impl.rs  mod.rs  prompt_impl.rs  service_impl.rs  session_impl.rs
tks-service/src/tks_dbus/fdo/: collection.rs  item.rs  mod.rs  prompt.rs  service.rs  session.rs
tks-service/src/tks_error/: mod.rs
tks-service/tests/: service_test.rs  test.sh
tks-service/tests/fdo/: mod.rs  service_client.rs
tks_pam/: Cargo.toml
tks_pam/src/: lib.rs  pam_modules.rs
