[package]
name = "tks-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
console = "0.15.8"
log = "0.4.20"
pgp = "0.10.2"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
yubikey = "0.8.0"
