[package]
name = "tks-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
console = "0.15.8"
log = "0.4.22"
pgp = "0.13.1"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
yubikey = "0.8.0"
