[package]
name = "tks-service"
authors = ["Valentin Rusu <tks@rusu.info>"]
description = """
tks-service is a daemon that provides a DBus interface that implements the
standard org.freeedesktop.Secrets interface. It is meant to be used as a drop-in
replacement for gnome-keyring-daemon, or KWallet Daemin, but it is not a fork of
any of these. It is written from scratch in Rust, and it is meant to be used
independently of any desktop environment.
"""
documentation = "https://github.com/linux-tks/tks"
homepage = "https://linux-tks.io"
repository = "https://github.com/linux-tks/tks"
keywords = ["dbus", "keyring", "password", "secret", "storage", "vault",
"kwallet", "gnome-keyring"]
license = "BSD-2-Clause-Plus-Patent"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
closure = "0.3.0"
config = "0.13.4"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
dbus-tokio = "0.7.6"
futures = "0.3.29"
lazy_static = "1.4.0"
log = "0.4"
openssl = "0.10.62"
openssl-sys = "0.9.98"
pinentry = "0.5.0"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
secrecy = "0.8.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
shellexpand = "3.1.0"
tokio = { version = "1.34.0", features = ["full"] }
# tss-esapi = "7.4.0"
uuid = { version = "1.6.1", features = [ "v4", "fast-rng", "macro-diagnostics", "serde", ] }
vec_map = "0.8.2"
num-bigint = {  version = "0.4.4", features = ["rand"] }
rand = "0.8"
xdg = "2.5.2"

[dev-dependencies]
